[package]
name = "pob-extractor"
version = "0.1.0"
authors = ["Martin Lofaj <lofajmatko@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
flate2 = "1.0.20"
minidom = "0.13.0"
structopt = "0.3.21"
url = "2.2.0"
reqwest = { version = "0.11", features = ["blocking"] }
